Got AI working, though boxes don’t fill in.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Dots and Boxes</title>
         <script src="js/game-new.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="js/visuals.js"></script>
         <script src="js/controller.js"></script>
         <link rel="stylesheet" href="css/site.css" />
