Renamed game-new.js to game.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Dots and Boxes</title>
-        <script src="js/game-new.js"></script>
+        <script src="js/game.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="js/visuals.js"></script>
         <script src="js/controller.js"></script>
